[metadata]
name = tsbot
version = 0.8.3
description = Python API to create TeamSpeak3 Server Query bots.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0x4aK/TSBot
author = JK
license = MIT
license_file = LICENSE
classifiers =
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

    
[options]
zip_safe = False
packages = find:
install_requires =
    asyncssh>=2.9.0
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*

[options.extras_require]
tests =
  pytest
  mypy

[bdist_wheel]
universal = True
