[metadata]
name = tsbot
version = 0.12.2
description = Asynchronous framework to build TeamSpeak 3 Server Query bots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0x4aK/TSBot
author = 0x4aK
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
packages = find:
install_requires =
    asyncssh>=2.9.0
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    examples*

[options.extras_require]
tests =
  pytest
  mypy
